--- a/webapp/view/MainView.view.xml
+++ b/webapp/view/MainView.view.xml
@@ -4,7 +4,7 @@
 			<pages>
 				<Page id="page" title="{i18n>title}">
 					<content>
-						<Button tooltip="test"/>
+						<Button text="Corona" tooltip="test"/>
 					</content>
 				</Page>
 			</pages>
